# fastapi-todo

./: README.md  pyproject.toml
todo/: containers.py  main.py  settings.py
todo/infrastructure/: cache.py
todo/modules/task/: containers.py  dtos.py  endpoints.py  entities.py  exceptions.py  repositories.py  repository_interfaces.py  services.py
